logs/dag_id=tune_stream_dag/run_id=scheduled__2023-01-01T170000+0000/task_id=Load_songplays_fact_table/attempt=2.log
[2025-07-24T13:42:45.019+0000] {taskinstance.py:1956} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: tune_stream_dag.Load_songplays_fact_table scheduled__2023-01-01T17:00:00+00:00 [queued]>
[2025-07-24T13:42:45.147+0000] {taskinstance.py:1956} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: tune_stream_dag.Load_songplays_fact_table scheduled__2023-01-01T17:00:00+00:00 [queued]>
[2025-07-24T13:42:45.148+0000] {taskinstance.py:2170} INFO - Starting attempt 2 of 4
[2025-07-24T13:42:47.217+0000] {taskinstance.py:2191} INFO - Executing <Task(PythonOperator): Load_songplays_fact_table> on 2023-01-01 17:00:00+00:00
[2025-07-24T13:42:47.243+0000] {standard_task_runner.py:60} INFO - Started process 149 to run task
[2025-07-24T13:42:47.255+0000] {standard_task_runner.py:87} INFO - Running: ['***', 'tasks', 'run', 'tune_stream_dag', 'Load_songplays_fact_table', 'scheduled__2023-01-01T17:00:00+00:00', '--job-id', '315', '--raw', '--subdir', 'DAGS_FOLDER/etl_pipeline.py', '--cfg-path', '/tmp/tmp717qoex0']
[2025-07-24T13:42:47.338+0000] {standard_task_runner.py:88} INFO - Job 315: Subtask Load_songplays_fact_table
[2025-07-24T13:42:49.749+0000] {task_command.py:423} INFO - Running <TaskInstance: tune_stream_dag.Load_songplays_fact_table scheduled__2023-01-01T17:00:00+00:00 [running]> on host a4bcda7cb679
[2025-07-24T13:42:51.072+0000] {taskinstance.py:2480} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='genz-legend' AIRFLOW_CTX_DAG_ID='tune_stream_dag' AIRFLOW_CTX_TASK_ID='Load_songplays_fact_table' AIRFLOW_CTX_EXECUTION_DATE='2023-01-01T17:00:00+00:00' AIRFLOW_CTX_TRY_NUMBER='2' AIRFLOW_CTX_DAG_RUN_ID='scheduled__2023-01-01T17:00:00+00:00'
[2025-07-24T13:42:51.078+0000] {taskinstance.py:2698} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/models/taskinstance.py", line 433, in _execute_task
    result = execute_callable(context=context, **execute_callable_kwargs)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/operators/python.py", line 199, in execute
    return_value = self.execute_callable()
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/operators/python.py", line 216, in execute_callable
    return self.python_callable(*self.op_args, **self.op_kwargs)
  File "/opt/airflow/dags/etl_pipeline.py", line 168, in <lambda>
    python_callable=lambda: load_table(SqlQueries.songplay_table_insert),
  File "/opt/airflow/dags/etl_pipeline.py", line 127, in load_table
    cur.execute(f"DELETE FROM {query.split()[3]}")
psycopg2.errors.SyntaxError: syntax error at or near ")"
LINE 1: DELETE FROM events.start_time)
                                     ^

[2025-07-24T13:42:51.091+0000] {taskinstance.py:1138} INFO - Marking task as UP_FOR_RETRY. dag_id=tune_stream_dag, task_id=Load_songplays_fact_table, execution_date=20230101T170000, start_date=20250724T134245, end_date=20250724T134251
[2025-07-24T13:42:52.168+0000] {standard_task_runner.py:107} ERROR - Failed to execute job 315 for task Load_songplays_fact_table (syntax error at or near ")"
LINE 1: DELETE FROM events.start_time)
                                     ^
; 149)
[2025-07-24T13:42:53.419+0000] {local_task_job_runner.py:234} INFO - Task exited with return code 1
[2025-07-24T13:42:53.466+0000] {taskinstance.py:3280} INFO - 0 downstream tasks scheduled from follow-on schedule check
[2025-07-24T15:54:40.690+0000] {taskinstance.py:1956} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: tune_stream_dag.Load_songplays_fact_table scheduled__2023-01-01T17:00:00+00:00 [queued]>
[2025-07-24T15:54:40.701+0000] {taskinstance.py:1956} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: tune_stream_dag.Load_songplays_fact_table scheduled__2023-01-01T17:00:00+00:00 [queued]>
[2025-07-24T15:54:40.702+0000] {taskinstance.py:2170} INFO - Starting attempt 2 of 4
[2025-07-24T15:54:40.715+0000] {taskinstance.py:2191} INFO - Executing <Task(PythonOperator): Load_songplays_fact_table> on 2023-01-01 17:00:00+00:00
[2025-07-24T15:54:40.725+0000] {standard_task_runner.py:60} INFO - Started process 1208 to run task
[2025-07-24T15:54:40.729+0000] {standard_task_runner.py:87} INFO - Running: ['***', 'tasks', 'run', 'tune_stream_dag', 'Load_songplays_fact_table', 'scheduled__2023-01-01T17:00:00+00:00', '--job-id', '1206', '--raw', '--subdir', 'DAGS_FOLDER/etl_pipeline.py', '--cfg-path', '/tmp/tmp76q4ue0l']
[2025-07-24T15:54:40.733+0000] {standard_task_runner.py:88} INFO - Job 1206: Subtask Load_songplays_fact_table
[2025-07-24T15:54:40.832+0000] {task_command.py:423} INFO - Running <TaskInstance: tune_stream_dag.Load_songplays_fact_table scheduled__2023-01-01T17:00:00+00:00 [running]> on host c53547d84df1
[2025-07-24T15:54:40.956+0000] {taskinstance.py:2480} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='genz-legend' AIRFLOW_CTX_DAG_ID='tune_stream_dag' AIRFLOW_CTX_TASK_ID='Load_songplays_fact_table' AIRFLOW_CTX_EXECUTION_DATE='2023-01-01T17:00:00+00:00' AIRFLOW_CTX_TRY_NUMBER='2' AIRFLOW_CTX_DAG_RUN_ID='scheduled__2023-01-01T17:00:00+00:00'
[2025-07-24T15:54:45.964+0000] {taskinstance.py:2698} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/models/taskinstance.py", line 433, in _execute_task
    result = execute_callable(context=context, **execute_callable_kwargs)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/operators/python.py", line 199, in execute
    return_value = self.execute_callable()
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/operators/python.py", line 216, in execute_callable
    return self.python_callable(*self.op_args, **self.op_kwargs)
  File "/opt/airflow/dags/etl_pipeline.py", line 173, in <lambda>
    python_callable=lambda: load_table(SqlQueries.songplay_table_insert, 'songplays'),
  File "/opt/airflow/dags/etl_pipeline.py", line 132, in load_table
    cur.execute(f"INSERT INTO {table} {query}")
psycopg2.errors.UniqueViolation: duplicate key value violates unique constraint "songplays_pkey"
DETAIL:  Key (playid)=(e30eb65b5ce5534fed9764a7996916ec) already exists.

[2025-07-24T15:54:46.154+0000] {taskinstance.py:1138} INFO - Marking task as UP_FOR_RETRY. dag_id=tune_stream_dag, task_id=Load_songplays_fact_table, execution_date=20230101T170000, start_date=20250724T155440, end_date=20250724T155446
[2025-07-24T15:54:46.309+0000] {standard_task_runner.py:107} ERROR - Failed to execute job 1206 for task Load_songplays_fact_table (duplicate key value violates unique constraint "songplays_pkey"
DETAIL:  Key (playid)=(e30eb65b5ce5534fed9764a7996916ec) already exists.
; 1208)
[2025-07-24T15:54:46.364+0000] {local_task_job_runner.py:234} INFO - Task exited with return code 1
[2025-07-24T15:54:46.491+0000] {taskinstance.py:3280} INFO - 0 downstream tasks scheduled from follow-on schedule check
